<resources>
    <string name="app_name">Let\'s Shop</string>
    <string name="delete_all">Delete All</string>
    <string name="new_item">Add</string>
    <string name="itemName">item Name</string>
    <string name="bought">Already Bought</string>
    <string name="edit">View / Edit</string>
    <string name="delete">Delete</string>
    <string name="item_category">Item Category:</string>
    <string name="item_name">Item name</string>
    <string name="price"> Estimated Price</string>
    <string name="shopItemDescription">Description</string>
    <string name="save">Save</string>
    <string name="hide">Hide</string>
    <string name="you_added_an_item">You just added an item to shop</string>
    <string name="item_edited">You just edited an item</string>
    <string name="add_cancelled">Shop Item creation / editing cancelled</string>
    <string name="create_new_item">Click here to create a new shop item</string>
    <string name="a_new_shop_item">New Shop Item</string>
    <string name="create_shop_item">CreateShopItem</string>
    <string name="deleted_all_items">You just deleted all the shop items</string>
    <string name="deleted_an_item">You just deleted a shop item</string>
    <string name="attention">Attention!!!</string>
    <string name="confirm_delete_all">Are you sure you want to delete all the Shop items?</string>
    <string name="yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_item">Are you sure you want to delete this item?</string>
    <string name="deletion_cancelled">Deletion cancelled</string>
    <string name="et_name_error">The shop item name field cannot be empty</string>
    <string name="et_price_error">The estimated price field cannot be empty</string>
    <string name="wrong_content">WrongContent</string>
    <string name="summary">Summary</string>
    <string name="total_number_of_items">Number of Items: %1$s</string>
    <string name="total_price">Estimated Price: $%1$s</string>
    <string name="total_not_bought">Total Price of Not Bought: $%1$s</string>
    <string name="total_bought">Total Price of Bought: $%1$s</string>
    <string name="default_value">0</string>
</resources>
